Finish backup script - pod affinity required

--- a/app-backup/Dockerfile
+++ b/app-backup/Dockerfile
@@ -4,3 +4,5 @@ RUN apt-get update && apt-get full-upgrade -y && apt install -y \
     tar ssh
 
 COPY /app-backup/backup.sh .
+
+CMD ["bash", "./backup.sh"]
