--- a/app-backup/Dockerfile
+++ b/app-backup/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:stable-slim
 
 RUN apt-get update && apt-get full-upgrade -y && apt install -y \
-    tar ssh
+    tar ssh sshpass scp
 
 COPY /app-backup/backup.sh .
 
