fix another path

--- a/kube-pvc-backup/Dockerfile
+++ b/kube-pvc-backup/Dockerfile
@@ -3,6 +3,6 @@ FROM debian:stable-slim
 RUN apt-get update && apt-get full-upgrade -y && apt install -y \
     tar ssh sshpass mariadb-client
 
-COPY /app-backup/backup.sh .
+COPY /kube-pvc-backup/backup.sh .
 
 CMD ["bash", "./backup.sh"]
