database only design

--- a/kube-db-backup/Dockerfile
+++ b/kube-db-backup/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:stable-slim
 
 RUN apt-get update && apt-get full-upgrade -y && apt install -y \
-    tar ssh sshpass mariadb-client
+    tar mariadb-client
 
-COPY /kube-pvc-backup/backup.sh .
+COPY /kube-db-backup/backup.sh .
 
 CMD ["bash", "./backup.sh"]
